# cryo3d-editor

./: .gitignore  LICENSE  README.md  TUTORIAL_GitHub_Publishing.html  TUTORIAL_Using_Cryo3D_Editor.html  USAGE.md  pyproject.toml  requirements.txt
src/napari_cryo3d_editor/: __init__.py  _widget.py  napari.yaml
